Changing index.html to make it slightly more complicated

--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-<div id="header"> Hello </div>
+<h>Hey there!</h>
 <div id="subheader"> My name is Casen </div>
+<p>I really like playing video games and coding</p>
