--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<h>Hey there!</h>
-<div id="subheader"> My name is Casen </div>
+<h1>Hey there!</h1>
+<div id="subheader"> My name is <strong> Casen </strong> </div>
 <p>I really like playing video games and coding</p>
