--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <h1>Hey there!</h1>
 <div id="subheader"> My name is <strong> Casen </strong> </div>
-<p>I really like playing video games and coding</p>
+<p>I really like playing video games and I hate <span>LUCA</span> </p>
