--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-
+<head>
+    <link rel="stylesheet" href="./styles.css" />
+</head>
 
 <h1>Hey there!</h1>
 <div id="subheader"> My name is <strong> Casen </strong> </div>
