--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
-<head>
-    <link rel="stylesheet" href="./styles.css" />
-</head>
+<html>
+    <head>
+        <link rel="stylesheet" href="./styles.css" />
+    </head>
 
-<h1>Hey there!</h1>
-<div id="subheader"> My name is <strong> Casen </strong> </div>
-<p>I really like playing video games and I hate <span>LUCA</span> </p>
+    <body>
+        
+        <div id ="gameArea">
+            <div id ="ball"> </div>
+        </div>
+
+    </body>
+
+    <script src="./ball.js"> </script>
+    
+</html>
